--- a/_vendor/github.com/HugoBlox/all-access/blox-all-access/blox/people.html
+++ b/_vendor/github.com/HugoBlox/all-access/blox-all-access/blox/people.html
@@ -62,7 +62,6 @@
               {{ end }}
               {{ if $image }}
                 {{/* $avatar_shape := site.Params.features.avatar.shape | default "circle" */}}
-                <a href="{{$person.Page.RelPermalink}}">
                   <img src="{{ $image.RelPermalink }}" alt="Avatar" width="{{$image.Width}}" height="{{$image.Height}}" loading="lazy"
                       class="absolute inset-0 h-full w-full object-cover transition duration-300 group-hover:scale-110"
                       data-nimg="1"
@@ -75,7 +74,7 @@
           </div>
 
           <h3 class="mt-8 font-display text-xl font-bold tracking-tight text-slate-900 dark:text-slate-100">
-            <a href="{{$person.Page.RelPermalink}}">{{.Title}}</a>
+            {{.Title}}
           </h3>
 
           {{ if ((and $show_role .Params.role) | and .Params.organizations) }}
