--- a/_vendor/github.com/HugoBlox/all-access/blox-all-access/blox/people.html
+++ b/_vendor/github.com/HugoBlox/all-access/blox-all-access/blox/people.html
@@ -55,6 +55,7 @@
               {{ end }}
               {{ if $image }}
                 {{/* $avatar_shape := site.Params.features.avatar.shape | default "circle" */}}
+                <a href="{{$person.Page.RelPermalink}}">
                   <img src="{{ $image.RelPermalink }}" alt="Avatar" width="{{$image.Width}}" height="{{$image.Height}}" loading="lazy"
                       class="absolute inset-0 h-full w-full object-cover transition duration-300 group-hover:scale-110"
                       data-nimg="1"
