--- a/_vendor/github.com/HugoBlox/all-access/blox-all-access/blox/table.html
+++ b/_vendor/github.com/HugoBlox/all-access/blox-all-access/blox/table.html
@@ -42,17 +42,18 @@
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">14:15 - 14:30</th>
         <th class="px-4 py-2 text-gray-500 font-normal">Internal (Transformer)</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Mudassir Ibrahim Awan & Seokhee Jeon (Kyung Hee University)</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Mudassir Ibrahim Awan and Seokhee Jeon (Kyung Hee University)</th>
       </tr>
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">14:30 - 14:45</th>
         <th class="px-4 py-2 text-gray-500 font-normal">Internal (Sensing)</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Minha Jeon, Jinyoung Lee, Jeongmin Lee and Seungjae Oh (Kyung Hee University)</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Jeongmin Lee and Seungjae Oh (Kyung Hee University)</th>
       </tr>
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">14:45 - 15:00</th>
         <th class="px-4 py-2 text-gray-500 font-normal">External (Generative)</th>
-        <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://www.tudelft.nl/en/staff/y.vardar/" ><span class="underline">Yasemin Vardar</span></a> (Delft University of Technology)</th>
+        <!-- <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://www.tudelft.nl/en/staff/y.vardar/" ><span class="underline">Yasemin Vardar</span></a> (Delft University of Technology)</th> -->
+        <th class="px-4 py-2 text-gray-500 font-normal">Yasemin Vardar (Delft University of Technology)</th>
       </tr>
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">15:00 - 15:10</th>
@@ -62,22 +63,25 @@
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">15:10 - 15:25</th>
         <th class="px-4 py-2 text-gray-500 font-normal">External (Generative)</th>
-        <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://hapislab.org/yasutoshi_makino" ><span class="underline">Yasutoshi Makino</span></a> (The University of Tokyo)</th>
+        <!-- <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://hapislab.org/yasutoshi_makino" ><span class="underline">Yasutoshi Makino</span></a> (The University of Tokyo)</th> -->
+        <th class="px-4 py-2 text-gray-500 font-normal">Yasutoshi Makino (The University of Tokyo)</th>
       </tr>
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">15:25 - 15:40</th>
         <th class="px-4 py-2 text-gray-500 font-normal">External (Human & Robot)</th>
-        <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://viterbi.usc.edu/directory/faculty/Culbertson/Heather" ><span class="underline">Heather Culbertson</span></a> (University of South California)</th>
+        <!-- <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://viterbi.usc.edu/directory/faculty/Culbertson/Heather" ><span class="underline">Heather Culbertson</span></a> (University of South California)</th> -->
+        <th class="px-4 py-2 text-gray-500 font-normal">Heather Culbertson (University of South California)</th>
       </tr>
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">15:40 - 15:55</th>
         <th class="px-4 py-2 text-gray-500 font-normal">External (Perception)</th>
-        <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://aimlab-haptics.com/principal-investigator" ><span class="underline">Mohamad Ei</span></a> (New York University Abu Dhabi)</th>
+        <!-- <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://aimlab-haptics.com/principal-investigator" ><span class="underline">Mohamad Ei</span></a> (New York University Abu Dhabi)</th> -->
+        <th class="px-4 py-2 text-gray-500 font-normal">Mohamad Ei (New York University Abu Dhabi)</th>
       </tr>
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">15:55 - 16:10</th>
         <th class="px-4 py-2 text-gray-500 font-normal">External (Sensing)</th>
-        <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://ceti.one/appointment-of-yitian-shao/" ><span class="underline">Yitian Shao</span></a> (Harbin Institute of Technology Shenzhen)</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Yitian Shao (Harbin Institute of Technology Shenzhen)</th>
       </tr>
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">16:10 - 16:20</th>
