--- a/_vendor/github.com/HugoBlox/all-access/blox-all-access/blox/table.html
+++ b/_vendor/github.com/HugoBlox/all-access/blox-all-access/blox/table.html
@@ -35,73 +35,70 @@
         <th class="px-4 py-2 border-b border-gray-200 dark:border-gray-700 font-semibold ">Speaker</th>
       </tr>
       <tr>
-        <th class="px-4 py-2 text-gray-500 font-normal">14:00 - 14:15</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Internal (LLM)</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Yujin Sung and Sang Ho Yoon (KAIST)</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">14:00 - 14:10</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Opening</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Organizers</th>
+      </tr>      
+      <tr>
+        <th class="px-4 py-2 text-gray-500 font-normal">14:10 - 14:50</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Ice-Breaking</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">All</th>
       </tr>
       <tr>
-        <th class="px-4 py-2 text-gray-500 font-normal">14:15 - 14:30</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Internal (Transformer)</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">14:50 - 15:05</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Perception & Modelling</th>
         <th class="px-4 py-2 text-gray-500 font-normal">Mudassir Ibrahim Awan and Seokhee Jeon (Kyung Hee University)</th>
+      </tr>      
+      <tr>
+        <th class="px-4 py-2 text-gray-500 font-normal">15:05 - 15:20</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">LLM</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Youjin Sung and Sang Ho Yoon (KAIST)</th>
       </tr>
       <tr>
-        <th class="px-4 py-2 text-gray-500 font-normal">14:30 - 14:45</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Internal (Sensing)</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Jeongmin Lee and Seungjae Oh (Kyung Hee University)</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">15:20 - 15:35</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Tactile Sensing</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Seungjae Oh (Kyung Hee University)</th>
       </tr>
       <tr>
-        <th class="px-4 py-2 text-gray-500 font-normal">14:45 - 15:00</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">External (Generative)</th>
-        <!-- <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://www.tudelft.nl/en/staff/y.vardar/" ><span class="underline">Yasemin Vardar</span></a> (Delft University of Technology)</th> -->
-        <th class="px-4 py-2 text-gray-500 font-normal">Yasemin Vardar (Delft University of Technology)</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">15:35 - 15:50</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Perception</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Li Zou & Yasemin Vardar (Delft University of Technology)</th>
       </tr>
       <tr>
-        <th class="px-4 py-2 text-gray-500 font-normal">15:00 - 15:10</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">15:50 - 16:00</th>
         <th class="px-4 py-2 text-gray-500 font-normal">Break</th>
         <th class="px-4 py-2 text-gray-500 font-normal"> - </th>
       </tr>
       <tr>
-        <th class="px-4 py-2 text-gray-500 font-normal">15:10 - 15:25</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">External (Generative)</th>
-        <!-- <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://hapislab.org/yasutoshi_makino" ><span class="underline">Yasutoshi Makino</span></a> (The University of Tokyo)</th> -->
-        <th class="px-4 py-2 text-gray-500 font-normal">Yasutoshi Makino (The University of Tokyo)</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">16:00 - 16:15</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Generative Models</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">MingXin Zhang and Yasutoshi Makino (The University of Tokyo)</th>
       </tr>
       <tr>
-        <th class="px-4 py-2 text-gray-500 font-normal">15:25 - 15:40</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">External (Human & Robot)</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">16:15 - 16:30</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Rendering & Perception</th>
         <!-- <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://viterbi.usc.edu/directory/faculty/Culbertson/Heather" ><span class="underline">Heather Culbertson</span></a> (University of South California)</th> -->
         <th class="px-4 py-2 text-gray-500 font-normal">Heather Culbertson (University of South California)</th>
       </tr>
       <tr>
-        <th class="px-4 py-2 text-gray-500 font-normal">15:40 - 15:55</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">External (Perception)</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">16:30 - 16:45</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Cognitive Haptic Interaction</th>
         <!-- <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://aimlab-haptics.com/principal-investigator" ><span class="underline">Mohamad Ei</span></a> (New York University Abu Dhabi)</th> -->
-        <th class="px-4 py-2 text-gray-500 font-normal">Mohamad Ei (New York University Abu Dhabi)</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Mohamad Eid (New York University Abu Dhabi)</th>
       </tr>
       <tr>
-        <th class="px-4 py-2 text-gray-500 font-normal">15:55 - 16:10</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">External (Sensing)</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">16:45 - 17:00</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Tactile Sensing</th>
         <th class="px-4 py-2 text-gray-500 font-normal">Yitian Shao (Harbin Institute of Technology Shenzhen)</th>
       </tr>
       <tr>
-        <th class="px-4 py-2 text-gray-500 font-normal">16:10 - 16:20</th>
-        <th class="px-4 py-2 text-gray-500 font-normal" >Break</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">17:00 - 17:30</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Group Discussion & Networking</th>
         <th class="px-4 py-2 text-gray-500 font-normal"> - </th>
-      </tr>
       <tr>
-        <th class="px-4 py-2 text-gray-500 font-normal">16:20 - 16:50</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Group Discussion</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Sensing　　Modelling & Perception　　Robot & Data Collection　　Rendering</th>
-      </tr>
-      <tr>
-        <th class="px-4 py-2 text-gray-500 font-normal">16:50 - 17:10</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Group Presentation</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Robot & Data Collection　　Rendering</th>
-      </tr>
-      <tr>
-        <th class="px-4 py-2 text-gray-500 font-normal">17:10 - 17:30</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Group Presentation</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Sensing　　Modelling & Perception</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">17:30 - 17:35</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Closing</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Organizers</th>
       </tr>
     </thead>
   </table>
