--- a/_vendor/github.com/HugoBlox/all-access/blox-all-access/blox/table.html
+++ b/_vendor/github.com/HugoBlox/all-access/blox-all-access/blox/table.html
@@ -46,7 +46,7 @@
       </tr>
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">14:50 - 15:05</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Perception & Modelling</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Perception and Modelling</th>
         <th class="px-4 py-2 text-gray-500 font-normal">Mudassir Ibrahim Awan and Seokhee Jeon (Kyung Hee University)</th>
       </tr>      
       <tr>
@@ -76,7 +76,7 @@
       </tr>
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">16:15 - 16:30</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Rendering & Perception</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Rendering and Perception</th>
         <!-- <th class="px-4 py-2 text-gray-500 font-normal"><a href="https://viterbi.usc.edu/directory/faculty/Culbertson/Heather" ><span class="underline">Heather Culbertson</span></a> (University of South California)</th> -->
         <th class="px-4 py-2 text-gray-500 font-normal">Heather Culbertson (University of South California)</th>
       </tr>
@@ -93,7 +93,7 @@
       </tr>
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">17:00 - 17:30</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">Group Discussion & Networking</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Group Discussion and Networking</th>
         <th class="px-4 py-2 text-gray-500 font-normal"> - </th>
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">17:30 - 17:35</th>
