--- a/_vendor/github.com/HugoBlox/all-access/blox-all-access/blox/table.html
+++ b/_vendor/github.com/HugoBlox/all-access/blox-all-access/blox/table.html
@@ -42,7 +42,7 @@
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">14:10 - 14:50</th>
         <th class="px-4 py-2 text-gray-500 font-normal">Ice-Breaking</th>
-        <th class="px-4 py-2 text-gray-500 font-normal">All</th>
+        <th class="px-4 py-2 text-gray-500 font-normal">Participants</th>
       </tr>
       <tr>
         <th class="px-4 py-2 text-gray-500 font-normal">14:50 - 15:05</th>
