--- a/public/event/llm/index.html
+++ b/public/event/llm/index.html
@@ -3,7 +3,7 @@
 <!-- Last Published: July 9, 2025 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="light">
   
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -40,7 +40,7 @@
   <meta name="description" content="Large Language Models (LLMs) have demonstrated impressive capabilities for natural language understanding and generation. What if we power recommender systems with LLMs that can reason through user activities on the platform, and can help plan recommendations accordingly? Equipped with UXR insights that people use nuanced language to describe their long-term interest journeys, and they want more user agency in their recommender platforms, we pinpoint a combination of LLMs and personalization as a key ingredient for the next generation of assistive recommendation." />
 
   
-  <link rel="alternate" hreflang="en-us" href="http://localhost:1313/event/llm/" />
+  <link rel="alternate" hreflang="en-us" href="https://example.com/event/llm/" />
 
   
   
@@ -157,7 +157,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hu_12e2292d21bc6698.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu_f1766f3ab95d3040.png" />
 
-  <link rel="canonical" href="http://localhost:1313/event/llm/" />
+  <link rel="canonical" href="https://example.com/event/llm/" />
 
   
   
@@ -184,10 +184,10 @@
     <meta property="twitter:creator" content="@GetResearchDev" />
   
   <meta property="og:site_name" content="AI in Haptics" />
-  <meta property="og:url" content="http://localhost:1313/event/llm/" />
+  <meta property="og:url" content="https://example.com/event/llm/" />
   <meta property="og:title" content="LLM-Based Assistive Recommendation | AI in Haptics" />
-  <meta property="og:description" content="Large Language Models (LLMs) have demonstrated impressive capabilities for natural language understanding and generation. What if we power recommender systems with LLMs that can reason through user activities on the platform, and can help plan recommendations accordingly? Equipped with UXR insights that people use nuanced language to describe their long-term interest journeys, and they want more user agency in their recommender platforms, we pinpoint a combination of LLMs and personalization as a key ingredient for the next generation of assistive recommendation." /><meta property="og:image" content="http://localhost:1313/media/logo.svg" />
-    <meta property="twitter:image" content="http://localhost:1313/media/logo.svg" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="Large Language Models (LLMs) have demonstrated impressive capabilities for natural language understanding and generation. What if we power recommender systems with LLMs that can reason through user activities on the platform, and can help plan recommendations accordingly? Equipped with UXR insights that people use nuanced language to describe their long-term interest journeys, and they want more user agency in their recommender platforms, we pinpoint a combination of LLMs and personalization as a key ingredient for the next generation of assistive recommendation." /><meta property="og:image" content="https://example.com/media/logo.svg" />
+    <meta property="twitter:image" content="https://example.com/media/logo.svg" /><meta property="og:locale" content="en-us" />
   
     
       <meta
@@ -214,7 +214,7 @@
   "@type": "Event",
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "http://localhost:1313/event/llm/"
+    "@id": "https://example.com/event/llm/"
   },
   "name": "LLM-Based Assistive Recommendation",
   
@@ -464,8 +464,8 @@
   
   <script
     defer
-    src="/js/hugo-blox-en.min.js"
-    integrity=""
+    src="/js/hugo-blox-en.min.e5fa931947cac2d947732ea37a770aae2b5bd4a50b6048060cd129b46159a06d.js"
+    integrity="sha256-5fqTGUfKwtlHcy6jencKritb1KULYEgGDNEptGFZoG0="
   ></script>
 
   
@@ -775,7 +775,7 @@
   <a
     target="_blank" rel="noopener"
     class="m-1 rounded-md bg-neutral-300 p-1.5 text-neutral-700 hover:bg-primary-500 hover:text-neutral-300 dark:bg-neutral-700 dark:text-neutral-300 dark:hover:bg-primary-400 dark:hover:text-neutral-800"
-    href="https://twitter.com/intent/tweet?url=http%3A%2F%2Flocalhost%3A1313%2Fevent%2Fllm%2F&amp;text=LLM-Based&#43;Assistive&#43;Recommendation"
+    href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fexample.com%2Fevent%2Fllm%2F&amp;text=LLM-Based&#43;Assistive&#43;Recommendation"
     title="X"
     aria-label="X"
     id="share-link-x"
@@ -793,7 +793,7 @@
   <a
     target="_blank" rel="noopener"
     class="m-1 rounded-md bg-neutral-300 p-1.5 text-neutral-700 hover:bg-primary-500 hover:text-neutral-300 dark:bg-neutral-700 dark:text-neutral-300 dark:hover:bg-primary-400 dark:hover:text-neutral-800"
-    href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Flocalhost%3A1313%2Fevent%2Fllm%2F&amp;t=LLM-Based&#43;Assistive&#43;Recommendation"
+    href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fexample.com%2Fevent%2Fllm%2F&amp;t=LLM-Based&#43;Assistive&#43;Recommendation"
     title="Facebook"
     aria-label="Facebook"
     id="share-link-facebook"
@@ -813,7 +813,7 @@
   <a
     target="_blank" rel="noopener"
     class="m-1 rounded-md bg-neutral-300 p-1.5 text-neutral-700 hover:bg-primary-500 hover:text-neutral-300 dark:bg-neutral-700 dark:text-neutral-300 dark:hover:bg-primary-400 dark:hover:text-neutral-800"
-    href="mailto:?subject=LLM-Based%20Assistive%20Recommendation&amp;body=http%3A%2F%2Flocalhost%3A1313%2Fevent%2Fllm%2F"
+    href="mailto:?subject=LLM-Based%20Assistive%20Recommendation&amp;body=https%3A%2F%2Fexample.com%2Fevent%2Fllm%2F"
     title="Email"
     aria-label="Email"
     id="share-link-email"
@@ -831,7 +831,7 @@
   <a
     target="_blank" rel="noopener"
     class="m-1 rounded-md bg-neutral-300 p-1.5 text-neutral-700 hover:bg-primary-500 hover:text-neutral-300 dark:bg-neutral-700 dark:text-neutral-300 dark:hover:bg-primary-400 dark:hover:text-neutral-800"
-    href="https://www.linkedin.com/shareArticle?url=http%3A%2F%2Flocalhost%3A1313%2Fevent%2Fllm%2F&amp;title=LLM-Based&#43;Assistive&#43;Recommendation"
+    href="https://www.linkedin.com/shareArticle?url=https%3A%2F%2Fexample.com%2Fevent%2Fllm%2F&amp;title=LLM-Based&#43;Assistive&#43;Recommendation"
     title="LinkedIn"
     aria-label="LinkedIn"
     id="share-link-linkedin"
@@ -849,7 +849,7 @@
   <a
     target="_blank" rel="noopener"
     class="m-1 rounded-md bg-neutral-300 p-1.5 text-neutral-700 hover:bg-primary-500 hover:text-neutral-300 dark:bg-neutral-700 dark:text-neutral-300 dark:hover:bg-primary-400 dark:hover:text-neutral-800"
-    href="whatsapp://send?text=LLM-Based&#43;Assistive&#43;Recommendation%20http%3A%2F%2Flocalhost%3A1313%2Fevent%2Fllm%2F"
+    href="whatsapp://send?text=LLM-Based&#43;Assistive&#43;Recommendation%20https%3A%2F%2Fexample.com%2Fevent%2Fllm%2F"
     title="WhatsApp"
     aria-label="WhatsApp"
     id="share-link-whatsapp"
