--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 <!-- Last Published: July 9, 2025 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="light">
   
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -40,7 +40,7 @@
   <meta name="description" content="A highly-customizable Hugo conference theme powered by Hugo Blox website builder." />
 
   
-  <link rel="alternate" hreflang="en-us" href="http://localhost:1313/404.html" />
+  <link rel="alternate" hreflang="en-us" href="https://example.com/404.html" />
 
   
   
@@ -157,7 +157,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hu_12e2292d21bc6698.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu_f1766f3ab95d3040.png" />
 
-  <link rel="canonical" href="http://localhost:1313/404.html" />
+  <link rel="canonical" href="https://example.com/404.html" />
 
   
   
@@ -184,10 +184,10 @@
     <meta property="twitter:creator" content="@GetResearchDev" />
   
   <meta property="og:site_name" content="AI in Haptics" />
-  <meta property="og:url" content="http://localhost:1313/404.html" />
+  <meta property="og:url" content="https://example.com/404.html" />
   <meta property="og:title" content="404 Page not found | AI in Haptics" />
-  <meta property="og:description" content="A highly-customizable Hugo conference theme powered by Hugo Blox website builder." /><meta property="og:image" content="http://localhost:1313/media/logo.svg" />
-    <meta property="twitter:image" content="http://localhost:1313/media/logo.svg" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="A highly-customizable Hugo conference theme powered by Hugo Blox website builder." /><meta property="og:image" content="https://example.com/media/logo.svg" />
+    <meta property="twitter:image" content="https://example.com/media/logo.svg" /><meta property="og:locale" content="en-us" />
   
     
   
@@ -427,8 +427,8 @@
   
   <script
     defer
-    src="/js/hugo-blox-en.min.js"
-    integrity=""
+    src="/js/hugo-blox-en.min.e5fa931947cac2d947732ea37a770aae2b5bd4a50b6048060cd129b46159a06d.js"
+    integrity="sha256-5fqTGUfKwtlHcy6jencKritb1KULYEgGDNEptGFZoG0="
   ></script>
 
   
